--- a/homepage/src/App.css
+++ b/homepage/src/App.css
@@ -1,3 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
-  background-color: #f1f5f2;
+  background-color: #2d3436;
+  background-image: linear-gradient(245deg, #2d3436 0%, #000000b2 74%);
+
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
